corrected alignment issues with text input

--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -5,7 +5,7 @@
 .input-lg {
   height: 40px;  
   width: 100%;
-  padding: 15px;
+  padding: 15px 0 15px 0;
   outline: none;
   border-top: 0px;
   border-right: 0px;
@@ -30,4 +30,5 @@
 .input-lg::placeholder {
   font-family: 'Roboto';
   text-transform: uppercase;
+  text-align: left;
 }
